syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "/pb";


service StockService{
  // 设置库存
  rpc SetStock(ProductStockItem) returns(google.protobuf.Empty);

  // 获取库存
  rpc StockDetail(ProductStockItem) returns(ProductStockItem);

  // 扣减库存
  rpc Sell(SellItem) returns(google.protobuf.Empty);

  // 归还库存
  rpc BackStock(SellItem) returns(google.protobuf.Empty);
}

message ProductStockItem{
  int32 productId = 1;
  int32 num = 2;
}

message SellItem{
  repeated ProductStockItem stockItemList = 1;
}